--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "basic project starter template for web",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "scss": "sass src/scss/styles.scss dist/css/main.css",
+    "serve": "browser-sync start --server --files 'dist/css/*.css, **/*.html'",
+    "watch:css": "onchange 'src/scss' -- npm run scss",
+    "start": "run-p serve watch:css"
   },
   "repository": {
     "type": "git",
@@ -19,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/MatthewKissinger/project-starter-template-1/issues"
   },
-  "homepage": "https://github.com/MatthewKissinger/project-starter-template-1#readme"
+  "homepage": "https://github.com/MatthewKissinger/project-starter-template-1#readme",
+  "devDependencies": {
+    "browser-sync": "^2.27.10",
+    "npm-run-all": "^4.1.5",
+    "onchange": "^7.1.0",
+    "sass": "^1.52.1"
+  }
 }
